<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoLo</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="set_server">Set server</string>
    <string name="about">License</string>
    <string name="state_open">Open</string>
    <string name="state_closed">Closed</string>
    <string name="na">not available</string>

    <string name="enter_text_here">Enter text here</string>

    <string name="error_loading_from_server">Error while loading tasks from the server</string>
    <string name="error_adding_to_server">Error while adding the task</string>
    <string name="error_deleting_from_server">Error while deleting the task</string>
    <string name="error_marking_as_done">Error while marking task as done</string>

    <string name="confirm_delete">Do you really want to delete this task?</string>
    <string name="deleted">The task was deleted</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="error_reading_license">The license could not be read.</string>

    <string name="provide_server_url">Please enter the URL to the server</string>
</resources>
